--- a/index.html
+++ b/index.html
@@ -6,6 +6,37 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Logan Hobbs</p>
+    <head>
+        <h1>My Hobbies</h1>
+    </head>
+    <main>
+        <article>
+            <h2>Guitar</h2>
+            <p>I've been playing guitar on and off for about 10 years. I was in a band during college and I still enjoy writing and recording music when I get time. I would like to eventually have my own music studio to create new sounds and record music.</p>
+            <img src="./images/monkey_guitar.jpg" alt="monkey playing guitar" width="750" height="500">
+        </article>
+
+        <article>
+            <h2>Snowboarding</h2>
+            <p>Although I have not been snowboarding in several years, when I lived close to North Carolina I would go at least 20 times a year. When I move our of Arkansas I plan on locating near snowy mountains again.</p>
+            <img src="./images/snowboarding.jpg" alt="riding a snowboard" width="750" height="500">
+        </article>
+
+        <article>
+            <h2>Helicopters</h2>
+            <p>I flew helicopters professionally and as a hobby for about 5 years. I was a flight instructor, a tour pilot in the Smoky Mountains, and then I flew for an EMS company for a brief period of time. While I probably will not go back into aviation professionally, I will fly for fun and maybe instruct again in the future.</p>
+            <img src="./images/helicopter.jpg" alt="flying a helicopter" width="750" height="500">
+        </article>
+
+        <article>
+            <h2>Coding</h2>
+            <p>Coding is my newest hobby. I'm hoping I can become competent enough to work professionally in the programming world. I think it's a skill that will be in demand for a long time and it's something I enjoy and hope to get paid for in the future.</p>
+            <img src="./images/coding.jpg" alt="monkey playing guitar" width="750" height="500">
+        </article>
+        <footer>
+            <p>&copy 2020</p>
+        </footer>
+    </main>
+    
 </body>
 </html>
