--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Rubik&family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <head>
@@ -12,29 +16,29 @@
     <main>
         <article>
             <h2>Guitar</h2>
-            <p>I've been playing guitar on and off for about 10 years. I was in a band during college and I still enjoy writing and recording music when I get time. I would like to eventually have my own music studio to create new sounds and record music.</p>
-            <img src="./images/monkey_guitar.jpg" alt="monkey playing guitar" width="750" height="500">
+            <p class="p-width">I've been playing guitar on and off for about 10 years. I was in a band during college and I still enjoy writing and recording music when I get time. I would like to eventually have my own music studio to create new sounds and record music.</p>
+            <img src="./images/monkey_guitar.jpg" alt="monkey playing guitar" width="650" height="500" class="img-control">
         </article>
 
         <article>
             <h2>Snowboarding</h2>
-            <p>Although I have not been snowboarding in several years, when I lived close to North Carolina I would go at least 20 times a year. When I move our of Arkansas I plan on locating near snowy mountains again.</p>
-            <img src="./images/snowboarding.jpg" alt="riding a snowboard" width="750" height="500">
+            <p class="p-width">Although I have not been snowboarding in several years, when I lived close to North Carolina I would go at least 20 times a year. When I move our of Arkansas I plan on locating near snowy mountains again.</p>
+            <img src="./images/snowboarding.jpg" alt="riding a snowboard" width="650" height="500" class="img-control">
         </article>
 
         <article>
             <h2>Helicopters</h2>
-            <p>I flew helicopters professionally and as a hobby for about 5 years. I was a flight instructor, a tour pilot in the Smoky Mountains, and then I flew for an EMS company for a brief period of time. While I probably will not go back into aviation professionally, I will fly for fun and maybe instruct again in the future.</p>
-            <img src="./images/helicopter.jpg" alt="flying a helicopter" width="750" height="500">
+            <p class="p-width">I flew helicopters professionally and as a hobby for about 5 years. I was a flight instructor, a tour pilot in the Smoky Mountains, and then I flew for an EMS company for a brief period of time. While I probably will not go back into aviation professionally, I will fly for fun and maybe instruct again in the future.</p>
+            <img src="./images/helicopter.jpg" alt="flying a helicopter" width="650" height="500" class="img-control">
         </article>
 
         <article>
             <h2>Coding</h2>
-            <p>Coding is my newest hobby. I'm hoping I can become competent enough to work professionally in the programming world. I think it's a skill that will be in demand for a long time and it's something I enjoy and hope to get paid for in the future.</p>
-            <img src="./images/coding.jpg" alt="monkey playing guitar" width="750" height="500">
+            <p class="p-width">Coding is my newest hobby. I'm hoping I can become competent enough to work professionally in the programming world. I think it's a skill that will be in demand for a long time and it's something I enjoy and hope to get paid for in the future.</p>
+            <img id = "last-img" src="./images/coding.jpg" alt="monkey playing guitar" width="650" height="500" class="img-control">
         </article>
         <footer>
-            <p>&copy 2020</p>
+            <p id="copyright">&copy 2020</p>
         </footer>
     </main>
     
