--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 
         <article>
             <h2>Snowboarding</h2>
-            <p class="p-width">Although I have not been snowboarding in several years, when I lived close to North Carolina I would go at least 20 times a year. When I move our of Arkansas I plan on locating near snowy mountains again.</p>
+            <p class="p-width">Although I have not been snowboarding in several years, when I lived close to North Carolina I would go snowboarding at least 20 times a year. When I move out of Arkansas I plan on locating near snowy mountains again.</p>
             <img src="./images/snowboarding.jpg" alt="riding a snowboard" width="650" height="500" class="img-control">
         </article>
 
         <article>
             <h2>Helicopters</h2>
-            <p class="p-width">I flew helicopters professionally and as a hobby for about 5 years. I was a flight instructor, a tour pilot in the Smoky Mountains, and then I flew for an EMS company for a brief period of time. While I probably will not go back into aviation professionally, I will fly for fun and maybe instruct again in the future.</p>
+            <p class="p-width">I flew helicopters as a hobby and professionally for about 5 years. I was a flight instructor, a tour pilot in the Smoky Mountains, and then I flew for an EMS company for a brief period of time. While I probably will not go back into aviation professionally, I will fly for fun and maybe instruct again in the future.</p>
             <img src="./images/helicopter.jpg" alt="flying a helicopter" width="650" height="500" class="img-control">
         </article>
 
         <article>
             <h2>Coding</h2>
-            <p class="p-width">Coding is my newest hobby. I'm hoping I can become competent enough to work professionally in the programming world. I think it's a skill that will be in demand for a long time and it's something I enjoy and hope to get paid for in the future.</p>
+            <p class="p-width">Coding is my newest hobby. I'm hoping I can become competent enough to work professionally in the programming world. I think it's a skill that will be in demand for a long time  and I enjoy it. Hopefully I can make money with my programming skills in the future.</p>
             <img id = "last-img" src="./images/coding.jpg" alt="monkey playing guitar" width="650" height="500" class="img-control">
         </article>
         <footer>
