--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <head>
+    <header>
         <h1>My Hobbies</h1>
-    </head>
+    </header>
     <main>
         <article>
             <h2>Guitar</h2>
